# human-money-core

./: .gitignore  .mutants.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md  generate_tree.sh  sign_standards.sh  sign_test_standards.sh
.agents/: instructions.md
.agents/rules/: cargo.md  status-maintenance.md
.cargo/: mutants.toml
.dev/: Business Rules Engines.md  ai_agent_instructions.md  design_decisions.md  llm-context.md
docs/adrs/: 000-adr-template.md  README.md
docs/de/: README.md  konliktmanagement.md  system-architektur.md  zustands-management.md
docs/security/: PRIVACY_MATRIX.md  TEST_STRATEGY.md  THREAT_MODEL.md
examples/: check_issuer.rs  l2_mock_node.rs  l2_playground.rs  playground_crypto_utils.rs  playground_double_spend_analysis.rs  playground_utils.rs  playground_voucher_lifecycle.rs  playground_wallet.rs  resign_freetaler.rs
scripts/: retest_missed.sh  run_mutation_tests.sh
src/: error.rs  lib.rs  main.rs  test_utils.rs
src/app_service/: api_readme.md  app_profile_handler.rs  app_queries.rs  app_signature_handler.rs  command_handler.rs  conflict_handler.rs  data_encryption.rs  l2_facade.rs  lifecycle.rs  mod.rs  seal_handler.rs
src/archive/: file_archive.rs  mod.rs
src/models/: conflict.rs  layer2_api.rs  mod.rs  profile.rs  readme_de.md  seal.rs  (+6 more)
temp/: uncovered_code.md
tests/: README.md  app_service_tests.rs  architecture_tests.rs  bypass_test.rs  cloning_protection.rs  core_logic_tests.rs  event_log_test.rs  flexible_encryption.rs  forced_double_spend_stealth_vulnerability.rs  integrity_test.rs  l2_integration_test.rs  l2_synchronization_test.rs  persistence_tests.rs  privacy_mode_compliance_test.rs  privacy_split_workflows.rs  privacy_traceability_test.rs  reproduce_integrity_bug.rs  security_audit_fixes.rs  services_tests.rs  validation_tests.rs  voucher_traceability_deep_test.rs  wallet_api_tests.rs  wot_conformance.rs
voucher_standards/: readme_de.md  standard_template.toml
(+119 files in other folders)
