[package]
name = "human_money_core"
version = "0.2.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde_json_canonicalizer = "0.3.0"
curve25519-dalek = { version = "4.1", features = ["group", "digest", "rand_core"] }
bip39 = { version = "2.1.0", features = ["std", "all-languages"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
argon2 = "0.5"
bincode = "1.3"
sha2 = "0.10"
sha3 = "0.10"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand_core = "0.6.4"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
bs58 = "0.5"
base64 = "0.21"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.14"
rust_decimal = "1.35"
thiserror = "1.0"
rust_decimal_macros = "1.35"
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
lazy_static = "1.4.0"
sysinfo = "0.30"
cel-interpreter = "0.10.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.2", features = ["json"] }

[lib]
name = "human_money_core"
path = "src/lib.rs"

[features]
test-utils = []

[[bin]]
name = "voucher-cli"
path = "src/bin/voucher-cli.rs"



[dev-dependencies]
rand = "0.8"
human_money_core = { version = "0.2.6", path = ".", features = ["test-utils"] }
regex = "1.10.4"
tempfile = "3.10.1"
lazy_static = "1.4.0"

[[example]]
name = "playground_crypto_utils"
path = "examples/playground_crypto_utils.rs"

[[example]]
name = "playground_utils"
path = "examples/playground_utils.rs"

[[example]]
name = "playground_voucher_lifecycle"
path = "examples/playground_voucher_lifecycle.rs"


